--- a/charts/suse-ai-hr-assistant/questions.yaml
+++ b/charts/suse-ai-hr-assistant/questions.yaml
@@ -1,151 +1,141 @@
-categories:
-- AI/ML
-- Observability
-- Demo
 questions:
-# Basic Configuration
-- variable: replicaCount
-  default: 1
-  description: "Number of application replicas"
-  type: int
-  min: 1
-  max: 5
-  label: Replica Count
-  group: "Application Configuration"
-
-# Observability Settings
 - variable: otlpEndpoint
-  default: "http://opentelemetry-collector.observability.svc.cluster.local:4318"
-  description: "OpenTelemetry collector endpoint for traces and metrics"
+  label: "OTLP Endpoint"
   type: string
-  label: OTLP Endpoint
-  group: "Observability Configuration"
-
-- variable: collectGpuStats
-  default: true
-  description: "Enable GPU metrics collection for demo purposes"
-  type: boolean
-  label: Collect GPU Statistics
-  group: "Observability Configuration"
-
-# Ollama Configuration
-- variable: ollama.enabled
-  default: true
-  description: "Deploy Ollama for local LLM inference"
-  type: boolean
-  label: Enable Ollama
-  group: "LLM Configuration"
+  description: "Open Telemetry Endpoint  - Include http:// and port."
+  required: true
+  default: "http://opentelemetry-collector.observability.svc.cluster.local:4318"
+  group: General
 
 - variable: ollamaEndpoint
-  default: "http://ollama:11434"
-  description: "Ollama API endpoint URL"
+  label: "SUSE AI Engine Endpoint"
   type: string
-  label: Ollama Endpoint
-  group: "LLM Configuration"
-  show_if: "ollama.enabled=true"
+  description: "The URL for the SUSE AI Engine service - Include http:// and port."
+  required: true
+  default: "http://suse-ai-engine:11434"
+  group: General
 
 - variable: ollama.gpu.enabled
+  group: General
+  label: "Enable NVIDIA GPU for SUSE AI Engine"
+  description: "Requires a node with NVIDIA drivers and the k8s device plugin installed."
+  type: "boolean"
   default: true
-  description: "Enable GPU acceleration for Ollama"
-  type: boolean
-  label: Enable GPU for Ollama
-  group: "LLM Configuration"
+  show_if: "ollama.enabled=true && ollama.hardware.type=nvidia"
+
+- variable: ollama.hardware.type
+  group: General
+  label: "Target Hardware for SUSE AI Engine"
+  description: "Select the target hardware architecture for the SUSE AI Engine deployment."
+  type: "enum"
+  required: true
+  default: "nvidia"
   show_if: "ollama.enabled=true"
+  options:
+    - label: "NVIDIA GPU (amd64)"
+      value: "nvidia"
+    - label: "Apple Silicon / CPU (arm64)"
+      value: "apple"
 
-- variable: ollama.gpu.number
-  default: 1
-  description: "Number of GPUs to allocate to Ollama"
-  type: int
-  min: 1
-  max: 4
-  label: GPU Count
-  group: "LLM Configuration"
-  show_if: "ollama.enabled=true&&ollama.gpu.enabled=true"
 
-# Demo Configuration
-- variable: schedule
-  default: "*/5 * * * *"
-  description: "CronJob schedule for automated demo traffic generation"
-  type: string
-  label: Demo Traffic Schedule
-  group: "Demo Configuration"
+- variable: ollama.enabled
+  group: "Ollama Deployment"
+  label: "Enable SUSE AI Engine Deployment"
+  description: "If true, SUSE AI Engine will be deployed as part of this chart."
+  type: "boolean"
+  default: true
 
-# Resource Configuration
-- variable: resources.requests.memory
-  default: "800Mi"
-  description: "Memory request for HR application pods"
-  type: string
-  label: Memory Request
-  group: "Resource Configuration"
-
-- variable: resources.requests.cpu
-  default: "400m"
-  description: "CPU request for HR application pods"
-  type: string
-  label: CPU Request
-  group: "Resource Configuration"
-
-- variable: resources.limits.memory
-  default: "1000Mi"
-  description: "Memory limit for HR application pods"
-  type: string
-  label: Memory Limit
-  group: "Resource Configuration"
-
-- variable: resources.limits.cpu
-  default: "600m"
-  description: "CPU limit for HR application pods"
-  type: string
-  label: CPU Limit
-  group: "Resource Configuration"
-
-# Ollama Resource Configuration
-- variable: ollama.resources.requests.memory
-  default: "2Gi"
-  description: "Memory request for Ollama pods"
-  type: string
-  label: Ollama Memory Request
-  group: "Resource Configuration"
-  show_if: "ollama.enabled=true"
-
-- variable: ollama.resources.limits.memory
-  default: "16Gi"
-  description: "Memory limit for Ollama pods"
-  type: string
-  label: Ollama Memory Limit
-  group: "Resource Configuration"
-  show_if: "ollama.enabled=true"
-
-# Models Configuration
 - variable: ollama.models[0]
+  group: "Ollama Deployment"
+  label: "Primary AI Model"
+  description: "The primary AI model to pull for HR queries (e.g., 'llama3.2:latest', 'tinyllama:latest')."
+  type: "string"
   default: "llama3.2:latest"
-  description: "Primary LLM model to download"
-  type: string
-  label: Primary Model
-  group: "Model Configuration"
   show_if: "ollama.enabled=true"
 
 - variable: ollama.models[1]
+  group: "Ollama Deployment"
+  label: "Secondary AI Model"
+  description: "Additional model for embeddings (optional)."
+  type: "string"  
   default: "bge-large:latest"
-  description: "Embedding model for RAG operations"
-  type: string
-  label: Embedding Model
-  group: "Model Configuration"
   show_if: "ollama.enabled=true"
 
-# Storage Configuration
+- variable: ollama.service.type
+  group: "Ollama Deployment"
+  label: "SUSE AI Engine Service Type"
+  description: "Method to expose the SUSE AI Engine service. 'ClusterIP' is recommended."
+  type: "enum"
+  required: true
+  default: "ClusterIP"
+  show_if: "ollama.enabled=true"
+  options:
+    - "ClusterIP"
+    - "NodePort"
+    - "LoadBalancer"
+
+
 - variable: ollama.persistence.enabled
+  group: "Ollama Deployment"
+  label: "Enable AI Model Persistence"
+  description: "If true, a PersistentVolumeClaim will be created to store AI models."
+  type: "boolean"
   default: false
-  description: "Enable persistent storage for Ollama models"
-  type: boolean
-  label: Enable Persistent Storage
-  group: "Storage Configuration"
   show_if: "ollama.enabled=true"
 
 - variable: ollama.persistence.size
+  group: "Ollama Deployment"
+  label: "AI Model Storage Size"
+  description: "The size of the PersistentVolumeClaim for AI models (e.g., '10Gi', '50Gi')."
+  type: "string"
   default: "10Gi"
-  description: "Size of persistent volume for Ollama models"
+  show_if: "ollama.enabled=true && ollama.persistence.enabled=true"
+
+- variable: ollama.persistence.storageClassName
+  group: "Ollama Deployment"
+  label: "AI Model Storage Class Name"
+  description: "The storage class name for the AI models PVC. Leave empty to use the default storage class."
+  type: "string"
+  default: ""
+  show_if: "ollama.enabled=true && ollama.persistence.enabled=true"
+
+- variable: ollama.resources.requests.cpu
+  group: "Ollama Deployment"
+  label: "SUSE AI Engine CPU Request"
+  description: "The amount of CPU to reserve for the SUSE AI Engine container (e.g., '500m', '1')."
+  type: "string"
+  default: "2"
+  show_if: "ollama.enabled=true"
+
+- variable: ollama.resources.requests.memory
+  group: "Ollama Deployment"
+  label: "SUSE AI Engine Memory Request"
+  description: "The amount of memory to reserve for the SUSE AI Engine container (e.g., '1Gi', '2048Mi')."
+  type: "string"
+  default: "2Gi"
+  show_if: "ollama.enabled=true"
+
+- variable: ollama.resources.limits.cpu
+  group: "Ollama Deployment"
+  label: "SUSE AI Engine CPU Limit"
+  description: "The maximum amount of CPU the SUSE AI Engine container can use."
+  type: "string"
+  default: "4"
+  show_if: "ollama.enabled=true"
+
+- variable: ollama.resources.limits.memory
+  group: "Ollama Deployment"
+  label: "SUSE AI Engine Memory Limit"
+  description: "The maximum amount of memory the SUSE AI Engine container can use."
+  type: "string"
+  default: "16Gi"
+  show_if: "ollama.enabled=true"
+
+
+- variable: schedule
+  label: "Schedule"
   type: string
-  label: Storage Size
-  group: "Storage Configuration"
-  show_if: "ollama.enabled=true&&ollama.persistence.enabled=true"
+  default: "*/5 * * * *"
+  description: "Cron schedule for HR query simulation requests to demonstrate SUSE AI capabilities"
+  required: true
+  group: General
