--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -9,7 +9,7 @@ entries:
           name: bci-busybox
     apiVersion: v2
     appVersion: 0.11.4
-    created: "2025-09-16T08:35:14.770528-07:00"
+    created: "2025-09-16T15:57:46.880959405Z"
     description: Get up and running with Llama 3.2, Mistral, Gemma 2, and other large
       language models.
     digest: 35d0eb96d2de03c99452fa8b1cf3cfaa4b42df620d44ff0eb94e9e61a2e81036
@@ -34,7 +34,7 @@ entries:
   suse-ai-hr-assistant:
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T08:35:14.780582-07:00"
+    created: "2025-09-16T15:57:46.896928169Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -42,7 +42,7 @@ entries:
       version: 1.26.0
     description: SUSE AI HR Assistant Demo - Comprehensive LLM Observability with
       OpenLit and SUSE AI
-    digest: 004bfc363549c0ed48810ca8da1de4243264c3f60492acebee5acc4201b06419
+    digest: 6b5462e84015bf9713fb6a43457a387e7a0d0f2951bdf041e2ec05011cd8067b
     home: https://www.suse.com/products/ai/
     keywords:
     - ai
@@ -61,11 +61,11 @@ entries:
     - https://ollama.ai/
     type: application
     urls:
-    - suse-ai-hr-assistant-0.2.1.tgz
-    version: 0.2.1
+    - suse-ai-hr-assistant-0.2.10.tgz
+    version: 0.2.10
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T08:35:14.781835-07:00"
+    created: "2025-09-16T15:57:46.898739884Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -96,7 +96,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T08:35:14.779368-07:00"
+    created: "2025-09-16T15:57:46.895067572Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -127,7 +127,7 @@ entries:
     version: 0.1.6
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T08:35:14.776864-07:00"
+    created: "2025-09-16T15:57:46.891467345Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -158,7 +158,7 @@ entries:
     version: 0.1.5
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T08:35:14.775069-07:00"
+    created: "2025-09-16T15:57:46.887938772Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -189,7 +189,7 @@ entries:
     version: 0.1.4
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T08:35:14.773104-07:00"
+    created: "2025-09-16T15:57:46.884366837Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -218,4 +218,4 @@ entries:
     urls:
     - suse-ai-hr-assistant-0.1.3.tgz
     version: 0.1.3
-generated: "2025-09-16T08:35:14.767984-07:00"
+generated: "2025-09-16T15:57:46.879377911Z"
