--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -9,7 +9,7 @@ entries:
           name: bci-busybox
     apiVersion: v2
     appVersion: 0.11.4
-    created: "2025-09-16T16:22:34.451450823Z"
+    created: "2025-09-24T17:22:51.068979476Z"
     description: Get up and running with Llama 3.2, Mistral, Gemma 2, and other large
       language models.
     digest: 35d0eb96d2de03c99452fa8b1cf3cfaa4b42df620d44ff0eb94e9e61a2e81036
@@ -34,7 +34,38 @@ entries:
   suse-ai-hr-assistant:
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T16:22:34.464404403Z"
+    created: "2025-09-24T17:22:51.085370112Z"
+    dependencies:
+    - condition: ollama.enabled
+      name: ollama
+      repository: oci://dp.apps.rancher.io/charts
+      version: 1.26.0
+    description: SUSE AI HR Assistant Demo - Comprehensive LLM Observability with
+      OpenLit and SUSE AI
+    digest: aed2a6c2c257e2cd12be4b325189158e580190046ec0dd5927c2de0d418b18ff
+    home: https://www.suse.com/products/ai/
+    keywords:
+    - ai
+    - llm
+    - observability
+    - hr
+    - demo
+    - openlit
+    - ollama
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: suse-ai-hr-assistant
+    sources:
+    - https://github.com/openlit/openlit
+    - https://ollama.ai/
+    type: application
+    urls:
+    - suse-ai-hr-assistant-0.2.14.tgz
+    version: 0.2.14
+  - apiVersion: v2
+    appVersion: latest
+    created: "2025-09-24T17:22:51.081815934Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -65,7 +96,7 @@ entries:
     version: 0.2.12
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T16:22:34.462387926Z"
+    created: "2025-09-24T17:22:51.079977797Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -96,7 +127,7 @@ entries:
     version: 0.2.10
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T16:22:34.467142455Z"
+    created: "2025-09-24T17:22:51.087244397Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -127,7 +158,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T16:22:34.46050045Z"
+    created: "2025-09-24T17:22:51.078142256Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -158,7 +189,7 @@ entries:
     version: 0.1.6
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T16:22:34.457817211Z"
+    created: "2025-09-24T17:22:51.075390596Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -189,7 +220,7 @@ entries:
     version: 0.1.5
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T16:22:34.455949531Z"
+    created: "2025-09-24T17:22:51.073516472Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -220,7 +251,7 @@ entries:
     version: 0.1.4
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-16T16:22:34.453407819Z"
+    created: "2025-09-24T17:22:51.07161649Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -249,4 +280,4 @@ entries:
     urls:
     - suse-ai-hr-assistant-0.1.3.tgz
     version: 0.1.3
-generated: "2025-09-16T16:22:34.449880087Z"
+generated: "2025-09-24T17:22:51.067382428Z"
