--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -9,7 +9,7 @@ entries:
           name: bci-busybox
     apiVersion: v2
     appVersion: 0.11.4
-    created: "2025-09-24T17:22:51.068979476Z"
+    created: "2025-09-24T17:57:40.644185204Z"
     description: Get up and running with Llama 3.2, Mistral, Gemma 2, and other large
       language models.
     digest: 35d0eb96d2de03c99452fa8b1cf3cfaa4b42df620d44ff0eb94e9e61a2e81036
@@ -34,7 +34,38 @@ entries:
   suse-ai-hr-assistant:
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-24T17:22:51.085370112Z"
+    created: "2025-09-24T17:57:40.671100964Z"
+    dependencies:
+    - condition: ollama.enabled
+      name: ollama
+      repository: oci://dp.apps.rancher.io/charts
+      version: 1.26.0
+    description: SUSE AI HR Assistant Demo - Comprehensive LLM Observability with
+      OpenLit and SUSE AI
+    digest: bfe4d67b5334c202df4f433b56cdaa04515e8d723e3cf3730a21f83933b42353
+    home: https://www.suse.com/products/ai/
+    keywords:
+    - ai
+    - llm
+    - observability
+    - hr
+    - demo
+    - openlit
+    - ollama
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: suse-ai-hr-assistant
+    sources:
+    - https://github.com/openlit/openlit
+    - https://ollama.ai/
+    type: application
+    urls:
+    - suse-ai-hr-assistant-0.2.15.tgz
+    version: 0.2.15
+  - apiVersion: v2
+    appVersion: latest
+    created: "2025-09-24T17:57:40.667374033Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -65,7 +96,7 @@ entries:
     version: 0.2.14
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-24T17:22:51.081815934Z"
+    created: "2025-09-24T17:57:40.663621177Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -96,7 +127,7 @@ entries:
     version: 0.2.12
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-24T17:22:51.079977797Z"
+    created: "2025-09-24T17:57:40.66175855Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -127,7 +158,38 @@ entries:
     version: 0.2.10
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-24T17:22:51.087244397Z"
+    created: "2025-09-24T17:57:40.659924115Z"
+    dependencies:
+    - condition: ollama.enabled
+      name: ollama
+      repository: oci://dp.apps.rancher.io/charts
+      version: 1.26.0
+    description: SUSE AI HR Assistant Demo - Comprehensive LLM Observability with
+      OpenLit and SUSE AI
+    digest: 004bfc363549c0ed48810ca8da1de4243264c3f60492acebee5acc4201b06419
+    home: https://www.suse.com/products/ai/
+    keywords:
+    - ai
+    - llm
+    - observability
+    - hr
+    - demo
+    - openlit
+    - ollama
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: suse-ai-hr-assistant
+    sources:
+    - https://github.com/openlit/openlit
+    - https://ollama.ai/
+    type: application
+    urls:
+    - suse-ai-hr-assistant-0.2.1.tgz
+    version: 0.2.1
+  - apiVersion: v2
+    appVersion: latest
+    created: "2025-09-24T17:57:40.673024215Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -158,7 +220,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-24T17:22:51.078142256Z"
+    created: "2025-09-24T17:57:40.656512217Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -189,7 +251,7 @@ entries:
     version: 0.1.6
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-24T17:22:51.075390596Z"
+    created: "2025-09-24T17:57:40.653014039Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -220,7 +282,7 @@ entries:
     version: 0.1.5
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-24T17:22:51.073516472Z"
+    created: "2025-09-24T17:57:40.649490203Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -251,7 +313,7 @@ entries:
     version: 0.1.4
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-24T17:22:51.07161649Z"
+    created: "2025-09-24T17:57:40.646114126Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -280,4 +342,4 @@ entries:
     urls:
     - suse-ai-hr-assistant-0.1.3.tgz
     version: 0.1.3
-generated: "2025-09-24T17:22:51.067382428Z"
+generated: "2025-09-24T17:57:40.642632128Z"
