🚀 Add SUSE AI Compare Chart Suite - Enterprise AI Response Comparison Platform
## New Charts Added
- **suse-ai-compare**: Enterprise AI comparison with comprehensive observability
- **suse-ai-compare-suse**: SUSE BCI hardened edition with NeuVector security
- **suse-ai-compare-opentelemetry**: Advanced GenAI observability with token tracking

## Features
✅ **Multi-LLM Comparison**: Side-by-side AI response comparison
✅ **Ollama Integration**: Local LLM serving with GPU acceleration
✅ **Open WebUI**: Pipeline-enhanced web interface
✅ **Enterprise Security**: NeuVector DLP demos and SUSE BCI containers
✅ **Advanced Observability**: OpenTelemetry, token tracking, cost analysis
✅ **Streamlined UI**: Optimized questions.yaml with conditional logic

## Chart Variants
| Chart | Load Simulator | Security | Observability | Use Case |
|-------|---------------|----------|---------------|----------|
| suse-ai-compare | Default OFF | Optional | Basic | Development/Testing |
| suse-ai-compare-suse | Default OFF | NeuVector ON | Basic | Enterprise/Production |
| suse-ai-compare-opentelemetry | Default ON | Optional | Full GenAI | Advanced Monitoring |

## GitHub Actions Updates
- Added all 3 charts to workflow dispatch options
- Updated GitHub Pages index with chart documentation
- Automated release system ready for version management

## Installation Examples
```bash
# Basic deployment
helm install ai-compare suse-ai-greendocs/suse-ai-compare

# Enterprise with security
helm install ai-compare-suse suse-ai-greendocs/suse-ai-compare-suse

# Full observability
helm install ai-compare-otel suse-ai-greendocs/suse-ai-compare-opentelemetry
```

Ready for automated chart releases and GitHub Pages publishing.

--- a/.github/workflows/chart-release.yml
+++ b/.github/workflows/chart-release.yml
@@ -15,6 +15,9 @@ on:
         type: choice
         options:
           - suse-ai-hr-assistant
+          - suse-ai-compare
+          - suse-ai-compare-suse
+          - suse-ai-compare-opentelemetry
       version_bump:
         description: 'Version bump type'
         required: true
@@ -258,6 +261,33 @@ jobs:
                   <p><strong>Installation:</strong></p>
                   <code>helm repo add suse-ai-greendocs https://your-org.github.io/suse-ai-greendocs</code><br>
                   <code>helm install hr-assistant suse-ai-greendocs/suse-ai-hr-assistant</code>
+              </div>
+
+              <div class="chart">
+                  <h3>suse-ai-compare</h3>
+                  <p>SUSE AI Compare - Enterprise AI response comparison platform with comprehensive observability</p>
+                  <div class="version">Latest version available in index.yaml</div>
+                  <p><strong>Installation:</strong></p>
+                  <code>helm repo add suse-ai-greendocs https://your-org.github.io/suse-ai-greendocs</code><br>
+                  <code>helm install ai-compare suse-ai-greendocs/suse-ai-compare</code>
+              </div>
+
+              <div class="chart">
+                  <h3>suse-ai-compare-suse</h3>
+                  <p>SUSE AI Compare SUSE Edition - Enterprise-hardened with SUSE BCI containers and NeuVector security</p>
+                  <div class="version">Latest version available in index.yaml</div>
+                  <p><strong>Installation:</strong></p>
+                  <code>helm repo add suse-ai-greendocs https://your-org.github.io/suse-ai-greendocs</code><br>
+                  <code>helm install ai-compare-suse suse-ai-greendocs/suse-ai-compare-suse</code>
+              </div>
+
+              <div class="chart">
+                  <h3>suse-ai-compare-opentelemetry</h3>
+                  <p>SUSE AI Compare OpenTelemetry Edition - Advanced GenAI observability with token tracking and cost analysis</p>
+                  <div class="version">Latest version available in index.yaml</div>
+                  <p><strong>Installation:</strong></p>
+                  <code>helm repo add suse-ai-greendocs https://your-org.github.io/suse-ai-greendocs</code><br>
+                  <code>helm install ai-compare-otel suse-ai-greendocs/suse-ai-compare-opentelemetry</code>
               </div>
 
               <h2>Repository Setup</h2>
