--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -1,43 +1,12 @@
 apiVersion: v1
 entries:
-  ollama:
-  - annotations:
-      helm.sh/images: |
-        - image: dp.apps.rancher.io/containers/ollama:0.11.4
-          name: ollama
-        - image: dp.apps.rancher.io/containers/bci-busybox:15.5
-          name: bci-busybox
-    apiVersion: v2
-    appVersion: 0.11.4
-    created: "2025-09-25T01:18:39.97975407Z"
-    description: Get up and running with Llama 3.2, Mistral, Gemma 2, and other large
-      language models.
-    digest: 35d0eb96d2de03c99452fa8b1cf3cfaa4b42df620d44ff0eb94e9e61a2e81036
-    home: https://apps.rancher.io/applications/ollama
-    icon: https://apps.rancher.io/logos/ollama.png
-    keywords:
-    - ai
-    - llm
-    - llama
-    - mistral
-    kubeVersion: ^1.16.0-0
-    maintainers:
-    - name: SUSE LLC
-      url: https://www.suse.com
-    name: ollama
-    sources:
-    - https://github.com/ollama/ollama
-    type: application
-    urls:
-    - ollama-1.26.0.tgz
-    version: 1.26.0
   suse-ai-compare:
   - annotations:
       category: AI/ML
       licenses: MIT
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:39.98275853Z"
+    created: "2025-09-25T06:57:57.512376-07:00"
     description: SUSE AI Compare - Enterprise AI response comparison platform with
       comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
       chat interface. Built with SUSE-hardened container images, GPU support, and
@@ -65,10 +34,87 @@ entries:
     urls:
     - suse-ai-compare-0.1.1.tgz
     version: 0.1.1
+  suse-ai-compare-opentelemetry:
+  - annotations:
+      category: AI/ML
+      licenses: MIT
+      observability.suse.com/compatible: "true"
+      opentelemetry.io/instrumented: "true"
+    apiVersion: v2
+    appVersion: latest
+    created: "2025-09-25T06:57:57.513471-07:00"
+    description: SUSE AI Compare OpenTelemetry Edition - Advanced observability-focused
+      AI response comparison platform. Features comprehensive GenAI telemetry, token-level
+      cost tracking, model performance monitoring, and deep integration with SUSE
+      Observability.
+    digest: d2131899e021ec0999f6063331e6e13712db3dead1a9e10769bd80514665a95f
+    home: https://www.suse.com/products/ai/
+    keywords:
+    - ai
+    - llm
+    - ollama
+    - machine-learning
+    - opentelemetry
+    - observability
+    - telemetry
+    - monitoring
+    - genai
+    - tokens
+    - cost-tracking
+    - demo
+    - suse
+    - enterprise
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: suse-ai-compare-opentelemetry
+    sources:
+    - https://github.com/wiredquill/ai-demos
+    type: application
+    urls:
+    - suse-ai-compare-opentelemetry-0.1.0.tgz
+    version: 0.1.0
+  suse-ai-compare-suse:
+  - annotations:
+      category: AI/ML
+      licenses: MIT
+      suse.com/bci-images: "true"
+      suse.com/certified: "true"
+    apiVersion: v2
+    appVersion: latest
+    created: "2025-09-25T06:57:57.514171-07:00"
+    description: SUSE AI Compare SUSE Edition - Enterprise AI response comparison
+      platform optimized for SUSE environments. Features SUSE BCI images, native SUSE
+      Observability integration, NeuVector security demos, and full SUSE cloud-native
+      stack compatibility.
+    digest: c1547645549ee3f2896287da18b87b833f0883e22cf0420ba1d05005f066d6cc
+    home: https://www.suse.com/products/ai/
+    keywords:
+    - ai
+    - llm
+    - ollama
+    - machine-learning
+    - suse
+    - enterprise
+    - observability
+    - neuvector
+    - security
+    - demo
+    - bci
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: suse-ai-compare-suse
+    sources:
+    - https://github.com/wiredquill/ai-demos
+    type: application
+    urls:
+    - suse-ai-compare-suse-0.1.0.tgz
+    version: 0.1.0
   suse-ai-hr-assistant:
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:40.003797752Z"
+    created: "2025-09-25T06:57:57.528146-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -99,7 +145,7 @@ entries:
     version: 0.2.15
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:40.000865439Z"
+    created: "2025-09-25T06:57:57.5261-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -130,7 +176,7 @@ entries:
     version: 0.2.14
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:39.997248563Z"
+    created: "2025-09-25T06:57:57.523727-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -161,7 +207,7 @@ entries:
     version: 0.2.12
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:39.995361976Z"
+    created: "2025-09-25T06:57:57.522568-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -192,7 +238,7 @@ entries:
     version: 0.2.10
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:39.992806686Z"
+    created: "2025-09-25T06:57:57.521325-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -223,7 +269,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:40.006460155Z"
+    created: "2025-09-25T06:57:57.529726-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -254,7 +300,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:39.990982425Z"
+    created: "2025-09-25T06:57:57.519606-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -285,7 +331,7 @@ entries:
     version: 0.1.6
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:39.989155018Z"
+    created: "2025-09-25T06:57:57.518358-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -316,7 +362,7 @@ entries:
     version: 0.1.5
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:39.986642252Z"
+    created: "2025-09-25T06:57:57.517092-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -347,7 +393,7 @@ entries:
     version: 0.1.4
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T01:18:39.984658462Z"
+    created: "2025-09-25T06:57:57.515362-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -376,4 +422,4 @@ entries:
     urls:
     - suse-ai-hr-assistant-0.1.3.tgz
     version: 0.1.3
-generated: "2025-09-25T01:18:39.978179766Z"
+generated: "2025-09-25T06:57:57.510583-07:00"
