--- a/charts/suse-ai-compare-opentelemetry/templates/32-deployment-ai-compare.yaml
+++ b/charts/suse-ai-compare-opentelemetry/templates/32-deployment-ai-compare.yaml
@@ -96,10 +96,7 @@ spec:
             - name: TRACE_REQUESTS_ENABLED
               value: "{{ .Values.aiCompare.observability.traceRequests }}"
             # Clean OpenLit configuration (following ravan/llm-experiments pattern)
-            - name: COLLECT_GPU_STATS
-              value: "{{ .Values.aiCompare.observability.collectGpuStats }}"
-            - name: OLLAMA_ENDPOINT
-              value: "http://ollama-service:11434"
+            # (COLLECT_GPU_STATS and OLLAMA_ENDPOINT already defined above)
             # Model configuration for demo
             - name: MODEL_CONFIG
               valueFrom:
