--- a/charts/suse-ai-compare-opentelemetry/values.yaml
+++ b/charts/suse-ai-compare-opentelemetry/values.yaml
@@ -8,8 +8,8 @@ imagePullSecrets:
 # -- Application settings
 ollama:
   image:
-    repository: dp.apps.rancher.io/containers/ollama
-    tag: "0.11.4"
+    repository: ollama/ollama
+    tag: "0.3.14"
   service:
     port: 11434
     type: ClusterIP
@@ -44,8 +44,8 @@ ollama:
       path: "/data/ai-models" # NFS share path for caching models
 openWebui:
   image:
-    repository: dp.apps.rancher.io/containers/open-webui
-    tag: "0.6.18" # SUSE Application Collection version with enterprise hardening
+    repository: ghcr.io/open-webui/open-webui
+    tag: "0.3.32"
   service:
     port: 8080
     type: NodePort
@@ -67,8 +67,8 @@ openWebui:
 pipelines:
   enabled: true
   image:
-    repository: dp.apps.rancher.io/containers/open-webui-pipelines
-    tag: "0.20250329.151219" # Current SUSE Application Collection version
+    repository: ghcr.io/open-webui/pipelines
+    tag: "0.3.26"
   service:
     port: 9099
     type: ClusterIP
