🔧 Fix pipelines ImagePullBackOff in OpenTelemetry chart
- Fix pipelines image tag from 0.3.26 to 'main' (correct tag)
- Upgrade suse-ai-compare-opentelemetry to v0.1.2
- The tag 0.3.26 doesn't exist, main is the stable release tag

✅ Resolves ImagePullBackOff: ghcr.io/open-webui/pipelines:main

--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -6,7 +6,7 @@ entries:
       licenses: MIT
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.302636-07:00"
+    created: "2025-09-25T07:31:23.32753-07:00"
     description: SUSE AI Compare - Enterprise AI response comparison platform with
       comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
       chat interface. Built with SUSE-hardened container images, GPU support, and
@@ -36,6 +36,46 @@ entries:
     - suse-ai-compare-0.1.1.tgz
     version: 0.1.1
   suse-ai-compare-opentelemetry:
+  - annotations:
+      category: AI/ML
+      licenses: MIT
+      observability.suse.com/compatible: "true"
+      opentelemetry.io/instrumented: "true"
+    apiVersion: v2
+    appVersion: latest
+    created: "2025-09-25T07:31:23.328389-07:00"
+    description: SUSE AI Compare OpenTelemetry Edition - Advanced observability-focused
+      AI response comparison platform. Features comprehensive GenAI telemetry, token-level
+      cost tracking, model performance monitoring, and deep integration with SUSE
+      Observability.
+    digest: 7cf764136254876db33378fa47bde71c8178af8cd906ca00a4761ed6f6476f93
+    home: https://www.suse.com/products/ai/
+    icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
+    keywords:
+    - ai
+    - llm
+    - ollama
+    - machine-learning
+    - opentelemetry
+    - observability
+    - telemetry
+    - monitoring
+    - genai
+    - tokens
+    - cost-tracking
+    - demo
+    - suse
+    - enterprise
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: suse-ai-compare-opentelemetry
+    sources:
+    - https://github.com/wiredquill/ai-demos
+    type: application
+    urls:
+    - suse-ai-compare-opentelemetry-0.1.2.tgz
+    version: 0.1.2
   - annotations:
       category: AI/ML
       licenses: MIT
@@ -123,7 +163,7 @@ entries:
       suse.com/certified: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.304528-07:00"
+    created: "2025-09-25T07:31:23.329969-07:00"
     description: SUSE AI Compare SUSE Edition - Enterprise AI response comparison
       platform optimized for SUSE environments. Features SUSE BCI images, native SUSE
       Observability integration, NeuVector security demos, and full SUSE cloud-native
@@ -156,7 +196,7 @@ entries:
   suse-ai-hr-assistant:
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.32432-07:00"
+    created: "2025-09-25T07:31:23.351748-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -187,7 +227,7 @@ entries:
     version: 0.2.15
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.321195-07:00"
+    created: "2025-09-25T07:31:23.348643-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -218,7 +258,7 @@ entries:
     version: 0.2.14
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.3185-07:00"
+    created: "2025-09-25T07:31:23.345294-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -249,7 +289,7 @@ entries:
     version: 0.2.12
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.316408-07:00"
+    created: "2025-09-25T07:31:23.343541-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -280,7 +320,7 @@ entries:
     version: 0.2.10
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.314815-07:00"
+    created: "2025-09-25T07:31:23.340882-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -311,7 +351,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.326074-07:00"
+    created: "2025-09-25T07:31:23.353449-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -342,7 +382,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.312939-07:00"
+    created: "2025-09-25T07:31:23.338995-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -373,7 +413,7 @@ entries:
     version: 0.1.6
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.310856-07:00"
+    created: "2025-09-25T07:31:23.337332-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -404,7 +444,7 @@ entries:
     version: 0.1.5
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.308987-07:00"
+    created: "2025-09-25T07:31:23.334956-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -435,7 +475,7 @@ entries:
     version: 0.1.4
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T07:14:17.307129-07:00"
+    created: "2025-09-25T07:31:23.332448-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -464,4 +504,4 @@ entries:
     urls:
     - suse-ai-hr-assistant-0.1.3.tgz
     version: 0.1.3
-generated: "2025-09-25T07:14:17.30072-07:00"
+generated: "2025-09-25T07:31:23.325921-07:00"
