🔧 Fix GitHub Actions workflow chart names
- Update workflow_dispatch chart name options to match renamed charts:
  - suse-ai-compare → ai-compare
  - suse-ai-compare-suse → ai-compare-suse
  - suse-ai-compare-opentelemetry → ai-compare-opentelemetry

✅ Resolves workflow failure due to outdated chart name references

--- a/.github/workflows/chart-release.yml
+++ b/.github/workflows/chart-release.yml
@@ -15,9 +15,9 @@ on:
         type: choice
         options:
           - suse-ai-hr-assistant
-          - suse-ai-compare
-          - suse-ai-compare-suse
-          - suse-ai-compare-opentelemetry
+          - ai-compare
+          - ai-compare-suse
+          - ai-compare-opentelemetry
       version_bump:
         description: 'Version bump type'
         required: true
